changes from lessons 3 & 4

--- a/app/views/urls/_form.html.erb
+++ b/app/views/urls/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :destination %><br />
-    <%= f.text_field :destination %>
+    <%= f.label :slug, "Short Code" %><br />
+    <%= f.text_field :slug %>
   </div>
   <div class="field">
-    <%= f.label :slug %><br />
-    <%= f.text_field :slug %>
+    <%= f.label :destination %><br />
+    <%= f.text_field :destination %>
   </div>
   <div class="actions">
     <%= f.submit %>
