--- a/app/views/urls/show.html.erb
+++ b/app/views/urls/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Destination:</b>
-  <%= @url.destination %>
+  <b>Short code:</b>
+  <%= @url.short_code %>
 </p>
 
 <p>
-  <b>Slug:</b>
-  <%= @url.slug %>
+  <b>Target:</b>
+  <%= @url.target %>
 </p>
 
 
