--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shortener</title>
+  <title><%= content_for?(:title) ? yield(:title) : @title || "Shortener" %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= auto_discovery_link_tag :rss, "/feed", :title => "RSS Feed" %>
 </head>
 <body>
+  <%= render :partial => "shared/header" %>
+  <% if content_for?(:sidebar) %>
+    <div class="sidebar">
+      <%= yield :sidebar %>
+    </div>
+  <% end %>
 
 <%= yield %>
 
